ENGG-3351: fix Bottomsheet overflow issue (#3086)

--- a/app/src/features/apiClient/screens/apiClient/components/clientView/components/response/ApiClientBottomSheet/apiclientBottomSheet.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/clientView/components/response/ApiClientBottomSheet/apiclientBottomSheet.scss
@@ -5,6 +5,7 @@
 
   .api-client-sheet-panel {
     flex: 1;
+    overflow-y: hidden;
 
     .ant-tabs-extra-content {
       margin-top: -6px;
